Finalise initial functionality

--- a/PDFFactory/PDFFactory/PDFFactory.csproj
+++ b/PDFFactory/PDFFactory/PDFFactory.csproj
@@ -50,6 +50,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FilenameDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FilenameDialog.Designer.cs">
+      <DependentUpon>FilenameDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,6 +64,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FilenameDialog.resx">
+      <DependentUpon>FilenameDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -84,6 +93,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="factory.ico" />
     <Content Include="lib\itextsharp.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
